ver 2 map completed

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'balloon';
+  src: local('balloon'), 
+       url('./assets/fonts/BalloonFont-Regular.otf') format('opentype');
+  font-weight: normal; 
+  font-style: normal; 
+}
